--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"description": "A simple chrome extension that automatically refreshes a tab on a set interval.",
 	"version": "1.0",
 	"icons": {
-		"48": "./images/icon-inactive.png"
+		"48": "./icons/icon-inactive.png"
 	},
 	"permissions": [
 		"tabs"
@@ -15,7 +15,7 @@
 		]
 	},
 	"browser_action": {
-		"default_icon": "./images/icon-inactive.png",
+		"default_icon": "./icons/icon-inactive.png",
 		"default_popup": "./main/index.html"
 	}
 }
