--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Custom Auto Refresh",
-    "description": "A simple and lightweight chrome extension that automatically refreshes a tab on a fully customizable interval.",
-    "version": "1.3.0",
+    "description": "A simple and lightweight extension that automatically refreshes a tab on a fully customizable interval.",
+    "version": "2.0.0",
     "icons": {
         "48": "./icons/icon-inactive.png"
     },
