refactors, fixes, and improvements

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Custom Auto Refresh",
-    "description": "A simple and lightweight extension that automatically refreshes a tab on a fully customizable interval.",
-    "version": "2.3.2",
+    "name": "Custom Auto Refresher",
+    "description": "Extension that automatically refreshes a tab on a fully customizable interval.",
+    "version": "2.4.0",
     "icons": {
         "48": "./icons/icon-inactive.png"
     },
